[package]
name = "rp_ads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
mysql = "24.0.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
vkclient = "4.0.4"
tokio-test = "*"

[dev-dependencies]

rand = "0.8.5"
